@@ -1,1 +1,0 @@
-detection of host byte ordering
