@@ -1,13 +1,0 @@
-endian
-
-This module creates the appropriate typedef for the endian
-header file.
-
-It does a simple pointer check to see if memory is in little
-endian or big endian format. There are no plans to support
-middle endian byte ordering. The module writes a header file.
-
-This module is terminal, if the system isn't running in little
-endian or big endian mode, the build is halted.
-
-An 'endian:' line is written in sysdeps.out.
