@@ -1,3 +1,0 @@
-header-create
-terminal
-sysdepout
