@@ -1,24 +1,0 @@
-#!/bin/sh
-
-sd_tmp="sysdeps.out"
-f1_tmp="_endian.h"
-echo "SYSDEPS endian run create ${f1_tmp}"
-
-outdir="`head -n 1 ../conf-outdir`"
-if [ -z "${outdir}" ]
-then
-  echo "fatal: outdir not defined" 2>&1
-  exit 1
-fi
-outdir="../${outdir}"
-f1_out="${outdir}/${f1_tmp}"
-sd_out="${outdir}/${sd_tmp}"
-
-./endian ${f1_tmp} ${sd_tmp}
-if [ $? -eq 0 ]
-then
-  cp ${f1_tmp} ${f1_out}
-  cat ${sd_tmp} >> ${sd_out}
-else
-  exit 1
-fi
