@@ -1,6 +1,0 @@
-#ifndef ENDIANNESS_H
-#define ENDIANNESS_H
-
-#include "_endian.h"
-
-#endif
